404 페이지, 시리즈 디테일 리팩토링
