# openapi.json
@@ -82,7 +82,7 @@
           {
             "name": "page_size",
             "in": "query",
-            "description": "페이지당 항목 수 (최대 100)",
+            "description": "페이지당 항목 수 (최대 10000)",
             "type": "integer",
             "default": 20
           },
@@ -205,7 +205,7 @@
           {
             "name": "page_size",
             "in": "query",
-            "description": "페이지당 항목 수 (최대 100)",
+            "description": "페이지당 항목 수 (최대 10000)",
             "type": "integer",
             "default": 20
           },
@@ -342,7 +342,7 @@
           {
             "name": "page_size",
             "in": "query",
-            "description": "페이지당 항목 수 (최대 100)",
+            "description": "페이지당 항목 수 (최대 10000)",
             "type": "integer",
             "default": 20
           },
@@ -537,13 +537,83 @@
       ]
     },
     "/llm/api/summary-analysis/{episode_id}/": {
+      "get": {
+        "operationId": "llm_api_summary-analysis_read",
+        "description": "댓글 요약 조회",
+        "parameters": [
+          {
+            "name": "episode_id",
+            "in": "path",
+            "description": "에피소드의 ID",
+            "required": true,
+            "type": "integer",
+            "default": "61823562"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/CommentsSummary"
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        },
+        "tags": ["llm"]
+      },
       "post": {
         "operationId": "llm_api_summary-analysis_create",
-        "description": "Create a summary of comment emotion analysis results.",
-        "parameters": [],
+        "description": "댓글 요약 생성",
+        "parameters": [
+          {
+            "name": "episode_id",
+            "in": "path",
+            "description": "에피소드의 ID",
+            "required": true,
+            "type": "integer",
+            "default": "61823562"
+          }
+        ],
         "responses": {
-          "201": {
-            "description": ""
+          "200": {
+            "description": "",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/CommentsSummary"
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        },
+        "tags": ["llm"]
+      },
+      "delete": {
+        "operationId": "llm_api_summary-analysis_delete",
+        "description": "댓글 요약 삭제",
+        "parameters": [
+          {
+            "name": "episode_id",
+            "in": "path",
+            "description": "에피소드의 ID",
+            "required": true,
+            "type": "integer",
+            "default": "61823562"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "삭제 성공 (No Content)"
+          },
+          "404": {
+            "description": "No summaries found for this episode."
           }
         },
         "tags": ["llm"]
@@ -863,6 +933,37 @@
         },
         "comment": {
           "title": "Comment",
+          "type": "integer"
+        }
+      }
+    },
+    "CommentsSummary": {
+      "required": ["source_comments", "episode"],
+      "type": "object",
+      "properties": {
+        "id": {
+          "title": "ID",
+          "type": "integer",
+          "readOnly": true
+        },
+        "source_comments": {
+          "title": "Source comments",
+          "type": "object"
+        },
+        "summary": {
+          "title": "Summary",
+          "type": "string",
+          "readOnly": true,
+          "minLength": 1
+        },
+        "created_at": {
+          "title": "Created at",
+          "type": "string",
+          "format": "date-time",
+          "readOnly": true
+        },
+        "episode": {
+          "title": "Episode",
           "type": "integer"
         }
       }
