# src/api/schemas/index.ts
@@ -9,6 +9,8 @@
 export * from './comment';
 export * from './commentEmoticon';
 export * from './commentEmotionAnalysis';
+export * from './commentsSummary';
+export * from './commentsSummarySourceComments';
 export * from './crawlerEpisodeCommentList200';
 export * from './crawlerEpisodeCommentListParams';
 export * from './crawlerSeriesEpisodeList200';
